docker-k8s-webapp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: webapp
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
